# recordnote

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml  test_fonts.py
.claude/: settings.local.json
recordnote-rust/: .gitignore  CLAUDE.md  Cargo.toml  README.md
recordnote-rust/src/: lib.rs  main.rs
recordnote-rust/src/audio/: recorder.rs
recordnote-rust/src/formatter/: minutes.rs  mod.rs
recordnote-rust/src/speech/: transcriber.rs
recordnote-rust/src/ui/: app.rs  mod.rs  recording_widget.rs
recordnote-rust/tests/: integration_test.rs
src/recordnote/: __init__.py  app.py  font_manager.py  formatter.py  kivy_app.py  recorder.py  transcriber.py
tests/: __init__.py  test_formatter.py
