[package]
name = "recordnote"
version = "0.1.0"
edition = "2021"
authors = ["Osada Yu <osada@shisui.tokyo>"]
description = "Japanese voice recording and meeting minutes generation app"
license = "MIT OR Apache-2.0"

[[bin]]
name = "recordnote"
path = "src/main.rs"

[dependencies]
# GUI Framework
druid = "0.8"

# Audio Recording
cpal = "0.15"
hound = "3.5"

# Speech-to-Text (Placeholder - for demo purposes)
# Note: In production, you would use whisper.cpp bindings or similar
# candle-core = "0.9"
# candle-nn = "0.9"
# candle-transformers = "0.9"
# tokenizers = "0.21"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
regex = "1.0"

# File operations
tempfile = "3.0"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true